# projet-de-classification

./: Analyse.ipynb  README.md  Rapport_Analyse.txt  dependances.txt  example_submission.csv  pyproject.toml
