[tool.poetry]
name = "mlpro-classification-bank-churn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
scipy = "^1.15.1"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
